Fixed jumping hovered link in nav

--- a/src/styles/_design.scss
+++ b/src/styles/_design.scss
@@ -56,6 +56,7 @@
   }
 
   &__more-link {
-    @include moreLink;
+    @include moreLink(40%);
+    padding-top: 30px;
   }
 }
