--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -63,6 +63,7 @@
       right: -40px;
       justify-items: end;
       padding: 60px 70px 30px;
+      font-family: $fontMain;
       background: $green;
       border-radius: 50%;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
