--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -20,6 +20,7 @@
 
     @media screen and (max-width: $maxMobileWidth) {
       font-size: 18px;
+      text-decoration: none;
       color: $white;
     }
 
