--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -37,21 +37,20 @@
   }
 
   &__link {
-    @include hover(color, $black);
-    font-size: 14px;
-    text-decoration: none;
-    line-height: 150%;
-    color: $granit;
-    outline: none;
+    @include moreLink(0);
+    font-family: $fontMain;
+    font-weight: 700;
 
     @media screen and (max-width: $maxMobileWidth) {
+      padding-top: 10px;
       font-size: 18px;
+      font-weight: 400;
       color: $white;
-    }
 
-    &:focus,
-    &:hover {
-      font-weight: 700;
+      &:hover,
+      &:focus {
+        color: $green;
+      }
     }
   }
 }
